# NutriMind-Agent-yzh

./: .gitignore  README.md
.github/workflows/: android-apk.yml  release.yml
Backend/tests/: test_knowledge.py
Frontend/: README.md
Frontend/src/api/: knowledge.js
Frontend/src/utils/: chatData.test.js  (+1 more)
backend/: .env.example  .gitignore  API.md  chat_cli.py  convert_uecfood.py  main.py  merge_datasets.py  prepare_data.py  pyproject.toml  test_model.py  train_yolo.py  train_yolo26.py
backend/app/api/: auth.py  camera.py  chat.py  dashboard.py  detection.py  health.py  knowledge.py  profile.py  training.py
backend/app/config/: settings.py
backend/app/core/: logger.py  security.py
backend/app/database/: seed.py  session.py
backend/app/entity/: db_models.py  schemas.py
backend/app/middleware/: request_logger.py
backend/app/services/: __init__.py  agent_graph.py  agent_prompts.py  agent_tools.py  camera_service.py  chat_service.py  data_utils.py  detection_service.py  image_store.py  knowledge_service.py  profile_service.py  training_service.py  user_service.py  web_search_service.py
backend/tests/: conftest.py  test_api_auth.py  test_api_chat.py  test_api_dashboard.py  test_api_health.py  test_detection_service.py  test_knowledge.py  test_models.py  test_schemas.py  test_security.py  test_seed.py  test_services.py
doc/: API.md  API对齐.md  NOMAD_AGENT_BACKEND_CHANGES.md  数据库设计说明书.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.test.js  vitest.setup.js
frontend/src/: main.js
(+71 files in other folders)
