[project]
name = "NutriMind-Agent"
version = "0.1.0"
description = "基于 YOLOv11 的目标检测智能体平台 API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "email-validator>=2.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "redis>=5.0.0",
  "minio>=7.2.0",
  "openai>=1.0.0",
  "langchain-openai>=0.0.0",
  "langchain-community>=0.0.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=1.0.0",
  "langgraph>=0.2.0",
  "pypdf>=4.0.0",
  "pgvector>=0.4.0",
  "aiofiles>=25.1.0",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "httpx>=0.24.0"]

[project.optional-dependencies]
test = ["httpx>=0.27.0", "pytest>=8.0.0"]
vision = ["ultralytics>=8.3.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
main = "main:start"
[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::starlette.exceptions.StarletteDeprecationWarning"]
